--- a/modules/pz_dns/files/cloudflare-dot.conf
+++ b/modules/pz_dns/files/cloudflare-dot.conf
@@ -1,6 +1,8 @@
 server:
 
 	interface: 0.0.0.0
+	access-control: 192.168.1.0/24 allow
+	access-control: 127.0.0.0/8 allow
 
 	forward-zone:
 		name: "."
