--- a/modules/pz_httpproxy/files/tinyproxy.conf
+++ b/modules/pz_httpproxy/files/tinyproxy.conf
@@ -101,7 +101,8 @@ MaxRequestsPerChild 0
 # tested against the controls based on order.
 #
 Allow 127.0.0.1
-Allow 192.168.1.0/24 # NB specific to this network!
+Allow 192.168.1.0/24
+# NB specific to this network!
 
 #
 # ViaProxyName: The "Via" header is required by the HTTP RFC, but using
