Switch file permissions for sentinel rsyslog

--- a/modules/pz_sentinel/files/rsyslog.conf
+++ b/modules/pz_sentinel/files/rsyslog.conf
@@ -35,7 +35,7 @@ $ActionFileDefaultTemplate RSYSLOG_TraditionalFileFormat
 # Set the default permissions for all log files.
 #
 $FileOwner root
-$FileGroup adm
+$FileGroup sentinel
 $FileCreateMode 0640
 $DirCreateMode 0755
 $Umask 0022
